# dcg

./: Cargo.toml  README.markdown  ROADMAP.markdown  build.rs  linguist.toml
config_derive/: Cargo.toml
config_derive/src/: lib.rs
manual/: book.toml
manual/src/: SUMMARY.md  introduction.md
manual/src/basics/: README.md  adding.md  checkout.md  commit.md  setup.md
manual/src/branching/: basics.md
manual/src/internals/: README.md
src/: main.rs
src/backend/: bcst.rs  data.rs  diff.rs  languages.rs  linear.rs  linguist.rs  merge.rs  metadata.rs  mod.rs  patch.rs  rcst.rs  serde.rs  types.rs
src/commands/: add.rs  commit.rs  diff.rs  init.rs  log.rs  mod.rs  rm.rs  status.rs  tag.rs
src/vcs/: commit.rs  config.rs  diffs.rs  index.rs  mod.rs
theory/: .gitignore  biblio.yml  dcg.hs  dcg.lean  lake-manifest.json  lakefile.toml  paper.typ
