[package]
name = "dcg"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.24"
tree-sitter-agda = "1.3"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-css = "0.23"
tree-sitter-embedded-template = "0.23"
tree-sitter-go = "0.23"
tree-sitter-haskell = "0.23"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-julia = "0.23"
tree-sitter-ocaml = "0.24"
tree-sitter-php = "0.23"
tree-sitter-python = "0.23"
tree-sitter-regex = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-scala = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-verilog = "1.0"

[build-dependencies]
cc="*"
toml = "0.8"
