[package]
name = "dcg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
config_derive = { path = "./config_derive" }
const_format = "0.2.32"
content_inspector = "0.2.4"
flate2 = { version = "1.1.2", features = ["zlib-rs"], default-features = false }
glob = "0.3.2"
hex = "0.4.3"
imara-diff = "0.2.0"
mktemp = "0.5.1"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tree-sitter = "0.24"
tree-sitter-agda = "1.3"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-css = "0.23"
tree-sitter-embedded-template = "0.23"
tree-sitter-go = "0.23"
tree-sitter-haskell = "0.23"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-julia = "0.23"
tree-sitter-ocaml = "0.24"
tree-sitter-php = "0.23"
tree-sitter-python = "0.23"
tree-sitter-regex = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-scala = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-verilog = "1.0"

[build-dependencies]
cc="*"
toml = "0.8"
